# igui.github.io

./: .buildpacks  .eslintignore  .eslintrc.js  .gitignore  .lintstagedrc  CNAME  LICENSE  NETLIFY_DEPLOYMENT.md  Procfile.windows  README.md  app.json  eslint.js  gatsby-config.js  gatsby-ssr.js  gulpfile.js  ideas.md  index.html  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  vercel.json  vite.config.ts  vitest.workspace.ts
api/: chat.test.ts  chat.ts  connections.test.ts  constants.ts  livekit-token.ts  system-prompt.txt
app/: settings.py  urls.py  views.py  wsgi.py
app/scss/: contact.scss  experiences-timeline.scss  experiences.scss  jumbotron.scss  profile.scss  projects.scss  skills.scss  styles.scss  variables.scss
app/templates/: base.html  contact.html  experiences.html  index.html  profile.html  projects.html  skill-part.html  skills.html
autoprefixer/: __init__.py
client/: index.html
client/public/: cv.html
client/src/: App.tsx  index.css  main.tsx
livekit-agent/: Dockerfile  README.md  livekit.toml  pyproject.toml
livekit-agent/shared/: profile.json
livekit-agent/src/: agent.py  system-prompt.jinja
plugins/gatsby-remark-hypenation/: index.js  package.json
public/videos/: head.webm
shared/: content.ts  profile.json
src/app/: layout.tsx  not-found.tsx  page.tsx
src/components/: About.tsx  Contact.tsx  ContactLink.tsx  Experiences.tsx  FullVideo.tsx  Header.tsx  Hero.tsx  HomeContent.tsx  Layout.tsx  NavRow.tsx  NotFound.tsx  Projects.tsx  Publications.tsx  Quote.tsx  Section.tsx  (+3 more)
(+87 files in other folders)
