[tool.poetry]
name = "igui-github-io"
version = "0.1.0"
description = "Ignacio's Website"
authors = ["Ignacio Avas <iavas@hired.com>"]
readme = "README.md"
packages = [{include = "igui"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
